--- a/interface/src/assets/scss/components/_careers.scss
+++ b/interface/src/assets/scss/components/_careers.scss
@@ -3,7 +3,7 @@
 .careers-page {
 	padding: 2.75rem auto;
 
-	.careers-page-header {
+	.careers-page-hero {
 		padding: 2.75rem 0 1.25rem;
 
 		& > p {
