--- a/interface/src/assets/scss/style.scss
+++ b/interface/src/assets/scss/style.scss
@@ -7,6 +7,9 @@
 @use './components/pricing';
 @use './components/about';
 @use './components/careers';
+@use './components//affiliates';
+@use './components/domains';
+@use './components/email_marketing';
 
 @use './components/footer';
 
