two pages added

--- a/interface/src/assets/scss/style.scss
+++ b/interface/src/assets/scss/style.scss
@@ -10,6 +10,8 @@
 @use './components//affiliates';
 @use './components/domains';
 @use './components/email_marketing';
+@use './components/online_store';
+@use './components/hire_expert';
 
 @use './components/footer';
 
