completed pages from ui

--- a/interface/src/assets/scss/style.scss
+++ b/interface/src/assets/scss/style.scss
@@ -12,6 +12,10 @@
 @use './components/email_marketing';
 @use './components/online_store';
 @use './components/hire_expert';
+@use './components/news_stand';
+@use './components/help_center';
+@use './components/point_of_sales';
+@use './components/scheduling';
 
 @use './components/footer';
 
