login and create account pages added

--- a/interface/src/assets/scss/_custom.scss
+++ b/interface/src/assets/scss/_custom.scss
@@ -2,4 +2,7 @@
 	box-sizing: border-box;
 }
 
+$primary-dark: #2B547E;
+$primary-light: #2C75C0;
+
 @import '../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
