--- a/interface/src/assets/scss/style.scss
+++ b/interface/src/assets/scss/style.scss
@@ -16,6 +16,8 @@
 @use './components/help_center';
 @use './components/point_of_sales';
 @use './components/scheduling';
+@use './components/create_account';
+@use './components/login';
 
 @use './components/footer';
 
