--- a/interface/src/assets/css/style.css
+++ b/interface/src/assets/css/style.css
@@ -89,6 +89,7 @@
 
 .templates {
   height: max-content;
+  margin-bottom: 12vh;
 }
 .templates .template {
   padding: 20px;
@@ -152,47 +153,63 @@
 }
 
 .call-to-action {
-  min-height: 80vh;
+  height: 80vh;
   background-image: linear-gradient(to bottom right, #2B547E, skyblue);
 }
 .call-to-action h2, .call-to-action p {
   color: #fff;
 }
+.call-to-action button {
+  background-color: #fff;
+  color: #2B547E;
+}
 .call-to-action div:first-child {
   margin: 50px 20px 0 20px;
 }
 .call-to-action .text-start img {
-  width: 200px;
+  width: 400px;
   position: relative;
-  bottom: -22.5vh;
+  bottom: -5vh;
   left: 0;
 }
-.call-to-action .groove-icons {
-  height: 20vh;
+
+.groove-icons {
+  height: 15vh;
   padding: 10px;
-  background-color: gray;
+  margin-bottom: 12vh;
+  background-color: #e4e4e4;
 }
-.call-to-action .groove-icons img {
-  width: 24px;
+.groove-icons img {
+  width: 96px;
   height: auto;
   padding: 7px;
 }
 
 .testimonies {
   min-height: 70vh;
+  margin-bottom: 15vh;
+}
+.testimonies h3 {
+  color: #2B547E;
 }
 .testimonies .testimony {
-  padding: 50px 5px;
   width: 60vh;
-}
-.testimonies .testimony blockquote {
-  border-sizing: content-box;
-  box-shadow: -6px -6px 9px white, 6px 6px 9px rgba(0, 0, 0, 0.4);
-  font-size: 1.3rem;
-  padding: 30px;
+  box-sizing: border-box;
+  box-shadow: 1px 2px 1px white, 3px 6px 20px rgba(0, 0, 0, 0.2);
   border-radius: 32px;
-  background: #e9e9e9;
-  /*text-shadow: -1px -1px 2px #fff, 2px 2px 2px rgba(0, 0, 0, 0.4);*/
+  margin: 10vh 0;
+}
+.testimonies .testimony p {
+  font-size: 1rem;
+  color: gray;
+  padding: 10px 20px;
+  margin: 2vh 30px 10vh 30px;
+}
+.testimonies .testimony img {
+  width: 12vh;
+  position: relative;
+  top: -30px;
+  left: -30px;
 }
 
 .pricing-page-body {
@@ -296,15 +313,18 @@ h3 {
 }
 
 .cta {
-  padding: 5rem 0;
+  padding: 8rem 0px 3rem 5rem;
   margin: 0;
   color: #fff;
   background-color: #000;
-  box-sizing: border-box;
 }
 .cta .btn {
   width: max-content;
   margin: 2.25rem 0;
+}
+.cta img {
+  width: 90vh;
+  height: auto;
 }
 
 .footer {
@@ -321,7 +341,7 @@ h3 {
   list-style: none;
 }
 .footer .copyright {
-  padding: 20px 0px;
+  padding: 20px 18vh;
 }
 .footer .copyright a {
   padding-right: 10px;
@@ -332,6 +352,9 @@ h3 {
 }
 .footer a:hover {
   color: #fff;
+}
+.footer .social-links a {
+  padding: 5px;
 }
 
 .page-header {
