--- a/interface/src/assets/scss/components/_calltoaction.scss
+++ b/interface/src/assets/scss/components/_calltoaction.scss
@@ -1,11 +1,16 @@
 @use '../custom' as *;
 
 .call-to-action {
-    min-height: 80vh;
+    height: 80vh;
     background-image: linear-gradient(to bottom right, $primary-dark, skyblue);
-
+    
     h2, p {
         color: #fff;
+    }
+
+    button {
+        background-color: #fff;
+        color: $primary-dark;
     }
 
     div:first-child {
@@ -14,22 +19,24 @@
 
     .text-start {
         img {
-            width: 200px;
+            width: 400px;
             position: relative;
-            bottom: -22.5vh;
+            bottom: -5vh;
             left: 0;
         }
     }
+}
 
-    .groove-icons {
-        height: 20vh;
-        padding: 10px;
-        background-color: gray;
+.groove-icons {
+    height: 15vh;
+    padding: 10px;
+    margin-bottom: 12vh;
+    
+    background-color: rgb(228, 228, 228);
 
-        img {
-            width: 24px;
-            height: auto;
-            padding: 7px;
-        }
+    img {
+        width: 96px;
+        height: auto;
+        padding: 7px;
     }
 }
