--- a/interface/src/assets/scss/components/_footer.scss
+++ b/interface/src/assets/scss/components/_footer.scss
@@ -1,13 +1,17 @@
 .cta {
-    padding: 5rem 0;
+    padding: 8rem 0px 3rem 5rem;
     margin: 0;
     color: #fff;
     background-color: #000;
-    box-sizing: border-box;
 
     .btn {
         width: max-content;
         margin: 2.25rem 0;
+    }
+
+    img {
+        width: 90vh;
+        height: auto;
     }
 }
 
@@ -27,7 +31,7 @@
     } 
 
     .copyright {
-        padding: 20px 0px;     
+        padding: 20px 18vh;     
 
         a {
             padding-right: 10px;
@@ -41,5 +45,9 @@
 
     a:hover {
         color: #fff;
+    }
+
+    .social-links a {
+        padding: 5px;
     }
 }
