--- a/interface/src/assets/scss/components/_testimonies.scss
+++ b/interface/src/assets/scss/components/_testimonies.scss
@@ -1,18 +1,33 @@
+@use '../custom' as *;
+
 .testimonies {
     min-height: 70vh;
+    margin-bottom: 15vh;
+
+    h3 {
+        color: $primary-dark;
+    }
 
     .testimony {
-        padding: 50px 5px;
+        // padding: 50px 5px;
         width: 60vh;
+        box-sizing: border-box;
+        box-shadow: 1px 2px 1px white, 3px 6px 20px rgba(0, 0, 0, 0.2);
+        border-radius: 32px;
+        margin: 10vh 0;
 
-        blockquote {
-            border-sizing: content-box;
-            box-shadow: -6px -6px 9px white, 6px 6px 9px rgba(0, 0, 0, 0.4);
-            font-size: 1.3rem;
-            padding: 30px;
-            border-radius: 32px;
-            background: #e9e9e9;
-            /*text-shadow: -1px -1px 2px #fff, 2px 2px 2px rgba(0, 0, 0, 0.4);*/
+        p {
+            font-size: 1rem;
+            color: gray;
+            padding: 10px 20px;
+            margin: 2vh 30px 10vh 30px;
+        }
+
+        img {
+            width: 12vh;
+            position: relative;
+            top: -30px;
+            left: -30px;
         }
     }
 }
