--- a/interface/src/assets/scss/components/_mixins.scss
+++ b/interface/src/assets/scss/components/_mixins.scss
@@ -24,3 +24,7 @@
     padding: 1.25rem 0;
     border-bottom: 1px solid #dfdfdf;
 }
+
+@mixin shadow {
+    box-shadow: 1px 2px 1px white, 3px 6px 20px rgba(0, 0, 0, 0.2);
+}
