--- a/interface/src/assets/scss/components/_testimonies.scss
+++ b/interface/src/assets/scss/components/_testimonies.scss
@@ -1,4 +1,5 @@
 @use '../custom' as *;
+@use './mixins' as *;
 
 .testimonies {
     min-height: 70vh;
@@ -12,15 +13,23 @@
         // padding: 50px 5px;
         width: 60vh;
         box-sizing: border-box;
-        box-shadow: 1px 2px 1px white, 3px 6px 20px rgba(0, 0, 0, 0.2);
+        @include shadow;
         border-radius: 32px;
         margin: 10vh 0;
+
+        i {
+            display: block;
+            font-size: 1.5rem;
+            color: $primary-dark;
+            padding-right: 5px;
+        }
 
         p {
             font-size: 1rem;
             color: gray;
-            padding: 10px 20px;
-            margin: 2vh 30px 10vh 30px;
+            padding: 0px 20px 10px;
+            margin: 2vh 30px 13vh 30px;
+            line-height: 1.5rem;
         }
 
         img {
