--- a/interface/src/assets/scss/components/_mixins.scss
+++ b/interface/src/assets/scss/components/_mixins.scss
@@ -2,7 +2,7 @@
 
 // GRADIENT MIXIN
 @mixin gradient {
-    background: linear-gradient(to right, rgba($primary, 0.95), rgba($secondary, 0.95));
+    background: linear-gradient(to right, rgba($primary-dark, 0.95), rgba($primary-light, 0.95));
 }
 
 // ABSOLUTE CENTER
