--- a/interface/src/assets/scss/components/_templates.scss
+++ b/interface/src/assets/scss/components/_templates.scss
@@ -10,7 +10,6 @@
 
     a {
         box-sizing: border-box;
-        padding-right: 15vh;
     }
 }
 
@@ -42,29 +41,56 @@
 
     input[type='text'] {
         width: 40vh;
-        padding: 3px 10px;
+        padding: 3px 20px;
         border: none;
         box-shadow: 1px 1px 10px 2px #dfdfdf;
-        text-align: center;
         border-radius: 5px;
     }
 
-    /*.templates-header {
-        padding: 1.25rem 0;
+    .dropdown-menus {
+        padding: 15px 0px 0px;
         border-bottom: 1px solid #dfdfdf;
-    }*/
+    }
 
     .dropdown {
-        padding: 1.25rem;
         margin-right: 2rem;
+        color: $primary-dark;
+        cursor: pointer;
+    }
+
+    .filter {
+        padding: 20px 0px;
+
+        h5 {
+            color: $primary-dark;
+        }
+
+        &-options {
+            padding: 5px 0px;
+
+            span {
+                font-size: 12px;
+                margin-right: 10px;
+                padding: 2px 10px;
+                border: 1px solid $primary-light;
+                border-radius: 3px;
+                cursor: pointer;
+            }
+
+            .active {
+                border: none;
+                background-color: rgb(233, 130, 147);
+                color: #fff;
+            }
+        }
     }
 }
 
 .pagination {
-
     padding-bottom: 10vh;
+    
     ul {
-        padding: 10px 20px 20px 0;
+        padding: 10px 10px 20px 0;
         margin: 0 auto;
 
         li {
@@ -73,7 +99,7 @@
 
             a {
                 text-decoration: none;
-                color: #000;
+                color: $primary-dark;
             }
 
             a:hover {
@@ -84,10 +110,5 @@
 }
 
 .templates-help {
-    min-height: 50vh;
-    padding: 20vh;
-
-    .btn {
-        margin-top: 3.75rem;
-    }
+    background-image: url('../images/templates_page_cta.png');
 }
