--- a/interface/src/assets/scss/components/_utils.scss
+++ b/interface/src/assets/scss/components/_utils.scss
@@ -1,4 +1,5 @@
 @use 'mixins' as *;
+@use '../custom' as *;
 
 .page-header {
 	height: 15vh;
@@ -6,6 +7,19 @@
 
 	h4 {
 		padding-top: 0.5rem;
+		color: $primary-dark;
 	}
 
+}
+
+.page-bottom-help {
+    height: 60vh;
+    padding: 20vh 10vh;
+    color: #fff;
+    border-top-right-radius: 10%;
+
+    .btn {
+        margin-top: 3.75rem;
+        background-color: $primary-dark;
+    }
 }
