--- a/interface/src/assets/scss/components/_affiliates.scss
+++ b/interface/src/assets/scss/components/_affiliates.scss
@@ -1,13 +1,60 @@
 @use 'mixins' as *;
+@use '../custom' as *;
 
 .affiliates-page {
 	padding: 2.75rem auto;
 
-	.affiliates-page-hero {
-		padding: 2.75rem 0 1.25rem;
+	&-hero {
+		background-image: url('../images/affiliate_heading_bg.png');
+		height: 50vh;
+		width: 80%;
+		border-bottom-right-radius: 20%;
+		color: #fff;
+		padding: 3.5rem 5.25rem;
 
 		& > p {
 			padding-top: 2.35rem;
 		}
+
+		button {
+			margin-top: 1.5rem;
+		}
+	}
+
+	&-body {
+		color: $primary-dark;
+		padding: 2.5rem 0px 1.75rem;
+
+		// .hiw-item {
+
+		// }
+
+		.offer {
+			min-height: 100vh;
+			padding: 5.25rem 0rem;
+
+			h3 {
+				padding-bottom: 2.5rem;
+			}
+
+			.accordion-item {
+				border-bottom: none;
+			}
+	
+			.accordion-button {
+				padding-left: 0;
+				margin: 20px 0px;
+				border: none;
+				color: $primary-dark;
+			}
+		}
+
+		.become-affiliates {
+			background-image: url('../images/affiliates_footer_bg.png');
+			height: 40vh;
+			padding: 3.75rem 5.5rem;
+			color: #fff;
+		}
+
 	}
 }
