pages styling and assets

--- a/interface/src/assets/scss/components/_domains.scss
+++ b/interface/src/assets/scss/components/_domains.scss
@@ -54,6 +54,8 @@
 
         i {
             font-size: 2rem;
+            font-stretch: extra-expanded;
+            padding-right: 10px;
         }
 
         h4 {
