--- a/interface/src/assets/css/style.css
+++ b/interface/src/assets/css/style.css
@@ -169,6 +169,10 @@
   text-decoration: none;
   color: #2B547E;
 }
+.pagination ul li a img {
+  width: 24px;
+  height: 24px;
+}
 .pagination ul li a:hover {
   color: #bbb;
 }
@@ -567,6 +571,8 @@ h3 {
 }
 .domains-page .offer i {
   font-size: 2rem;
+  font-stretch: extra-expanded;
+  padding-right: 10px;
 }
 .domains-page .offer h4 {
   padding: 1.75rem 0px 0.5rem;
@@ -577,6 +583,264 @@ h3 {
   height: 50vh;
   padding: 3.75rem 5.5rem;
   color: #fff;
+}
+
+.email-marketing-page {
+  padding: 2.75rem auto;
+}
+.email-marketing-page-hero {
+  background-image: url("../images/email_marketing_heading_bg.png");
+  height: 50vh;
+  width: 100%;
+  border-bottom-right-radius: 20%;
+  color: #fff;
+  padding: 3.5rem 5.25rem;
+}
+.email-marketing-page-hero > p {
+  padding-top: 2.35rem;
+}
+.email-marketing-page-hero button {
+  margin-top: 2rem;
+}
+.email-marketing-page-body {
+  color: #2B547E;
+  padding: 2.5rem 0px 1.75rem;
+}
+.email-marketing-page-body h3, .email-marketing-page-body h4 {
+  padding: 5px 0px;
+}
+.email-marketing-page-body p {
+  padding: 5px 0px 3.5rem;
+}
+.email-marketing-page-body .bullet-points {
+  margin: 3rem;
+}
+.email-marketing-page-body .bullet-points img {
+  padding-right: 1.5rem;
+}
+
+.email-marketing-head {
+  padding: 0;
+  margin: 0;
+}
+
+.email-marketing-foot {
+  background-image: url("../images/affiliates_footer_bg.png");
+  height: 50vh;
+  padding: 3.75rem 5.5rem;
+  color: #fff;
+}
+
+.online-store-page {
+  padding: 2.75rem auto;
+}
+.online-store-page-hero {
+  background-image: url("../images/online_store_heading_bg.png");
+  height: 50vh;
+  width: 100%;
+  border-bottom-right-radius: 20%;
+  color: #fff;
+  padding: 3.5rem 5.25rem;
+}
+.online-store-page-hero > p {
+  padding-top: 2.35rem;
+}
+.online-store-page-hero button {
+  margin-top: 2rem;
+}
+.online-store-page-body {
+  color: #2B547E;
+  padding: 4.5rem 0px 1.75rem;
+}
+.online-store-page-body h4 {
+  padding: 5px 0px;
+}
+
+.online-store-head {
+  padding: 0;
+  margin: 0;
+}
+
+.online-store-foot {
+  background-image: url("../images/affiliates_footer_bg.png");
+  height: 50vh;
+  padding: 3.75rem 5.5rem;
+  color: #fff;
+}
+
+.hire-expert-page {
+  padding: 2.75rem auto;
+}
+.hire-expert-page-hero {
+  background-image: url("../images/hire_expert_heading_bg.png");
+  height: 50vh;
+  width: 100%;
+  border-bottom-right-radius: 20%;
+  color: #fff;
+  padding: 3.5rem 5.25rem;
+}
+.hire-expert-page-hero > p {
+  padding-top: 2.35rem;
+}
+.hire-expert-page-hero button {
+  margin-top: 2rem;
+}
+.hire-expert-page-body {
+  color: #2B547E;
+  padding: 4.5rem 0px 1.75rem;
+}
+.hire-expert-page-body h4 {
+  padding: 5px 0px;
+}
+.hire-expert-page-body .statistics {
+  height: 30vh;
+  color: gray;
+}
+.hire-expert-page-body .statistics h1 {
+  font-size: 5rem;
+}
+.hire-expert-page-body .statistics p {
+  font-size: 1.2rem;
+}
+.hire-expert-page-body .explore-services {
+  margin: 10px 0px;
+}
+.hire-expert-page-body .from-people {
+  padding: 3.25rem 0;
+}
+.hire-expert-page-body .from-people h3 {
+  margin-bottom: 1.5rem;
+}
+.hire-expert-page-body .from-people img {
+  width: 210px;
+  height: relative;
+}
+.hire-expert-page-body .from-people p {
+  margin: 10px 0 0;
+  padding: 10px 0 0;
+  color: #363636;
+}
+.hire-expert-page-body .from-people span {
+  padding-top: 5px;
+  color: gray;
+}
+.hire-expert-page-body .from-people .quote {
+  padding: 2rem 2.5rem 2rem 0;
+  font-size: large;
+  color: #5f5f5f;
+}
+.hire-expert-page-body .hiw {
+  padding: 10px 0px;
+}
+.hire-expert-page-body .hiw ol {
+  font-size: 1.5rem;
+}
+.hire-expert-page-body .hiw ol li {
+  padding-bottom: 1.5rem;
+}
+.hire-expert-page-body .hiw ol li h4 {
+  padding: 1rem 0px;
+}
+.hire-expert-page-body .hiw ol li p {
+  font-size: 1rem;
+}
+
+.hire-expert-head {
+  padding: 0;
+  margin: 0;
+}
+
+.hire-expert-foot {
+  background-image: url("../images/affiliates_footer_bg.png");
+  height: 50vh;
+  padding: 3.75rem 5.5rem;
+  color: #fff;
+}
+
+.news-stand-page {
+  padding: 2.75rem auto;
+}
+.news-stand-page-hero {
+  background-image: url("../images/about_heading_bg.png");
+  background-repeat: no-repeat;
+  height: 50vh;
+  width: 100%;
+  border-bottom-right-radius: 0%;
+  color: #fff;
+  padding: 3.5rem 5.25rem;
+}
+.news-stand-page-hero p {
+  padding-top: 1.35rem;
+}
+.news-stand-page-body {
+  color: #2B547E;
+  padding: 1.5rem 0px 1.75rem;
+}
+.news-stand-page-body .trending-today {
+  padding: 1.5rem 0px;
+}
+.news-stand-page-body .trending-today h3 {
+  padding-bottom: 30px;
+}
+.news-stand-page-body .trending-today .trending-item {
+  margin: 1.5rem 0px;
+  padding: 1.5rem 0px;
+}
+.news-stand-page-body .trending-today .trending-item img {
+  width: 400px;
+  border-bottom-right-radius: 40%;
+}
+.news-stand-page-body .trending-today .trending-item-body {
+  padding-left: 3.5rem;
+  padding-bottom: 1rem;
+}
+.news-stand-page-body .trending-today .trending-item-body h4 {
+  padding-bottom: 1rem;
+}
+.news-stand-page-body .trending-today .trending-item-body a {
+  text-decoration: none;
+  color: #2B547E;
+}
+.news-stand-page-body .trending-today .trending-item-body a img {
+  width: 32px;
+  height: auto;
+}
+.news-stand-page-body .more-articles {
+  padding: 2.5rem;
+}
+.news-stand-page-body .more-articles a {
+  text-decoration: none;
+  color: #2B547E;
+}
+.news-stand-page-body .more-articles a img {
+  width: 28px;
+  height: auto;
+}
+
+.news-stand-head {
+  padding: 0;
+  margin: 0;
+}
+
+.news-stand-foot {
+  background-image: url("../images/careers_footer_bg.png");
+  height: 60vh;
+  padding: 3.75rem 1rem;
+  color: #fff;
+}
+.news-stand-foot h4 {
+  margin-top: 2rem;
+}
+.news-stand-foot input {
+  margin: 0.5rem 0;
+}
+.news-stand-foot textarea {
+  margin: 0.5rem 0;
+  resize: none;
+  padding: 10px;
+}
+.news-stand-foot .btn {
+  margin: 0.5rem 0;
 }
 
 .create-account-page {
