--- a/interface/src/assets/scss/components/_templates.scss
+++ b/interface/src/assets/scss/components/_templates.scss
@@ -100,6 +100,11 @@
             a {
                 text-decoration: none;
                 color: $primary-dark;
+
+                img {
+                    width: 24px;
+                    height: 24px;
+                }
             }
 
             a:hover {
