--- a/interface/src/assets/css/style.css
+++ b/interface/src/assets/css/style.css
@@ -941,6 +941,82 @@ h3 {
   color: #2B547E;
 }
 
+.pos-page {
+  padding: 2.75rem auto;
+}
+.pos-page-hero {
+  background-image: url("../images/pos_heading_bg.png");
+  height: 60vh;
+  width: 100%;
+  border-bottom-right-radius: 30%;
+  color: #fff;
+  padding: 3.5rem 5.25rem;
+}
+.pos-page-hero p {
+  padding-top: 0.35rem;
+}
+.pos-page-hero button {
+  margin-top: 1.5rem;
+}
+.pos-page-body {
+  color: #2B547E;
+  padding: 1.5rem 0px 1.75rem;
+}
+.pos-page-body .points {
+  padding: 2rem 0px;
+}
+.pos-page-body .points h4 {
+  margin: 3rem 0px 1rem;
+}
+.pos-page-body .hiw {
+  padding: 10px 0;
+}
+.pos-page-body .hiw h3 {
+  padding: 1.5rem 0px;
+}
+.pos-page-body .hiw-items div {
+  margin-bottom: 2rem;
+}
+.pos-page-body .hiw h4 {
+  padding: 1rem 0px 10px;
+}
+.pos-page-body .from-merchants {
+  padding: 5.25rem 0;
+}
+.pos-page-body .from-merchants img {
+  width: 210px;
+  height: relative;
+}
+.pos-page-body .from-merchants p {
+  margin: 10px 0 0;
+  padding: 10px 0 0;
+  color: #363636;
+}
+.pos-page-body .from-merchants span {
+  padding-top: 5px;
+  color: gray;
+}
+.pos-page-body .from-merchants .quote {
+  padding: 2rem 2.5rem 2rem 0;
+  font-size: large;
+  color: #5f5f5f;
+}
+
+.pos-head {
+  padding: 0;
+  margin: 0;
+}
+
+.pos-foot {
+  background-image: url("../images/affiliates_footer_bg.png");
+  height: 60vh;
+  padding: 3.75rem 1rem;
+  color: #fff;
+}
+.pos-foot h4 {
+  margin-top: 2rem;
+}
+
 .create-account-page {
   padding: 0;
   margin: 0;
